<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/everythingPic"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:id="@+id/everythingName"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_weight="1"
            android:id="@+id/categoryText"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_weight="1"
            android:text="@string/rating"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_weight="1"
            android:id="@+id/ratingNumber"/>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>